# draw-of-life

./: .gitignore  CMakeLists.txt  README.md
libs/SDL2/: FindSDL2.cmake
modules/: FindSDL2.cmake
src/: cells.h  cells_panel.h  color_panel.h  gens_buffer.h  main.c  prefs.h
src/cells/: cells.h
src/ui/: cells_panel.h  color_panel.h
